# trytry

./: README.md  README_ZH.md  pyproject.toml
example/: try1.py  try2.py  try3.py
src/trytry/: __init__.py
