[tool.poetry]
name = "trytry"
version = "0.1.1"
description = "优雅地处理python异常"
authors = ["miclon <jcnd@163.com>"]
readme = "README.md"
packages = [
    { include = 'trytry', from = 'src'}
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
